--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "music-master",
+  "name": "mmavens",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "start": "npm run build && live-server dist"
   },
   "keywords": [],
   "author": "",
