--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "axios": "^0.18.0",
     "live-server": "^1.2.1",
     "parcel-bundler": "^1.10.3",
     "react": "^16.6.3",
