--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "axios": "^0.19.0",
     "live-server": "^1.2.1",
     "lodash": "^4.17.15",
-    "parcel-bundler": "^1.10.3",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "vm2": "^3.8.4"
   }
 }
