--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "acorn": "^6.4.1",
     "axios": "^0.19.0",
     "live-server": "^1.2.1",
     "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
     "parcel-bundler": "^1.12.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
