updating node dependency

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "vm2": "^3.8.4"
+  },
+  "devDependencies": {
+    "node-forge": ">=0.10.0"
   }
 }
